<resources>
    <string name="app_name">Upde Partner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_booking">booking</string>
    <string name="title_confirm">confirm</string>
    <string name="title_complete">complete</string>
    <string name="title_time">Time leave:</string>
    <string name="title_ticket_no">Ticket no:</string>
    <string name="title_customer_multi_lang">Customer</string>
    <string name="title_pick_up_at_multi_lang">At</string>
    <string name="title_destination_multi_lang">Arrive</string>
    <string name="title_vehicle_type_multi_lang">Vehicle type</string>
    <string name="title_booking_time">Booking time</string>
    <string name="title_password">Password</string>
    <string name="title_total_multi_lang">Total</string>
    <string name="title_accept">Accept</string>
    <string name="title_confirm_detail">Confirm detail</string>
    <string name="title_complete_detail">Complete detail</string>
    <string name="title_booking_detail">Booking detail</string>
    <string name="title_time_to_pick_up_multi_lang">Time to pick up</string>
    <string name="title_create_account">Create account</string>
    <string name="title_name">Name</string>
    <string name="title_note">Note</string>
    <string name="title_edit_information">Edit personal information</string>
    <string name="title_home">Notification</string>
    <string name="title_confirm_password">Confirm password</string>
    <string name="title_about_us">Edit personal information</string>
    <string name="title_contact_us">Contact us</string>
    <string name="title_login">Supplier</string>
    <string name="title_statistic">Statistic</string>
    <string name="title_email" translatable="false">Email</string>
    <string name="title_confirm_sign_up">By creating an account you agree to the Terms of use</string>
    <string name="title_switch_to_login">Already hava an account?</string>
    <string name="title_log_out">Log out</string>
    <string name="title_launching_soon">Launching soon</string>
    <string name="title_profile">Profile</string>
    <string name="title_notification">Notification</string>
    <string name="title_seat"> seats</string>
    <string name="title_flight_no">Flight number</string>
    <string name="title_your_house">Your houses</string>
    <string name="title_help">Help</string>
    <string name="title_change_password">Change password</string>
    <string name="title_date_of_birth">Date of birth</string>
    <string name="title_gender">Gender</string>
    <string name="title_pick">Pick</string>
    <string name="text_no_data">No data</string>
    <string name="title_login_as_host">Host</string>
    <string name="app_slogan">Arrive for everywhere and at any time</string>
    <string name="description_text">Revenue</string>
    <string name="no_description_text">No data</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="custom">Custom</string>
    <string name="host_statistic_no_data">No Data</string>
    <string name="title_phone_number">Phone number</string>
    <string name="title_phone">Phone</string>
    <string name="title_old_password">Old password</string>
    <string name="title_new_password">New password</string>
    <string name="title_save_changed">Save changed</string>
    <string name="change_password">Change password</string>
    <string name="error_password_do_not_match">Confirm password do not match</string>
    <string name="error_can_not_be_empty">Can\'t not be empty</string>
    <string name="title_complete_time">Complete time</string>
    <string name="title_confirm_dialog">Confirm</string>
    <string name="content_confirm_dialog">Open %s in browser ?</string>
    <string name="title_access">Open</string>
    <string name="title_cancel">No</string>
    <string name="title_note_for_driver">Note for driver</string>
    <string name="title_character">character(s)</string>
    <string name="title_limit_reached">Input limitation reached</string>
</resources>

