<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="stp.cuonghq.upde.screen.confirmdetail.ConfirmDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <stp.cuonghq.upde.commons.AppToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_src="@drawable/ic_left_arrow"
            app:title="@string/title_confirm_detail"
            app:titleOrientation="center"
            app:toolbar_theme="accent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <stp.cuonghq.upde.commons.DisplayTextView
                    android:id="@+id/tv_ticket_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_ticket_no" />

                <stp.cuonghq.upde.commons.DisplayTextView
                    android:id="@+id/tv_flight_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_flight_no" />

                <stp.cuonghq.upde.commons.DisplayTextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_customer_multi_lang" />

                <stp.cuonghq.upde.commons.DisplayTextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_phone_number" />

                <stp.cuonghq.upde.commons.DisplayTextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_email" />

                <stp.cuonghq.upde.commons.DisplayTextView
                    android:id="@+id/tv_pickup_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_pick_up_at_multi_lang" />

                <stp.cuonghq.upde.commons.DisplayTextView
                    android:id="@+id/tv_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_destination_multi_lang" />

                <stp.cuonghq.upde.commons.DisplayTextView
                    android:id="@+id/tv_vehicle_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_vehicle_type_multi_lang" />

                <stp.cuonghq.upde.commons.DisplayTextView
                    android:id="@+id/tv_time_booking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_booking_time" />

                <stp.cuonghq.upde.commons.DisplayTextView
                    android:id="@+id/tv_time_pick_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_time_to_pick_up_multi_lang" />

                <stp.cuonghq.upde.commons.DisplayTextView
                    android:id="@+id/tv_complete_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_complete_time" />

                <stp.cuonghq.upde.commons.DisplayTextView
                    android:id="@+id/tv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_total_multi_lang" />

                <stp.cuonghq.upde.commons.DisplayTextView
                    android:id="@+id/tv_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_note" />

                <stp.cuonghq.upde.commons.DisplayTextView
                    app:is_end="true"
                    android:id="@+id/tv_note_for_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:displayTitle="@string/title_note_for_driver" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/top_shadow_gradient" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="20dp"
                    android:background="@drawable/background_app_button"
                    android:text="@string/title_complete"
                    android:textColor="@color/colorWhite" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="20dp"
                    android:text="@string/title_complete"
                    android:textAllCaps="true"
                    android:textColor="@color/colorDarkGreen"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</RelativeLayout>
