<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_component_large"
    android:layout_marginEnd="@dimen/margin_component_large"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="@dimen/margin_component_large">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:maxLines="1"
        android:text="@string/title_note_for_driver"
        android:textColor="@color/colorBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_component_large"
        android:background="@drawable/background_full_border_black"
        android:orientation="vertical"
        android:padding="@dimen/margin_component">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_char_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/title_character"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_note"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="Note: "
            android:maxLength="200"
            android:maxLines="20"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <stp.cuonghq.upde.components.AppCompatAutoResizeButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:background="@drawable/background_app_accent_button"
            android:text="@string/title_cancel"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <stp.cuonghq.upde.components.AppCompatAutoResizeButton
            android:id="@+id/btn_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:background="@drawable/background_app_button"
            android:text="@string/title_confirm"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>