<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".screen.start.signup.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:orientation="vertical">

        <include
            layout="@layout/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_component"
            android:layout_marginStart="@dimen/margin_component"
            android:layout_marginTop="30dp"
            app:hintEnabled="false">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_app_edittext"
                android:drawablePadding="30dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawableTint="@color/colorHint"
                android:fontFamily="@font/nunito"
                android:hint="@string/title_name"
                android:maxLength="32"
                android:maxLines="1"
                android:textColor="@color/colorHint"
                android:textColorHint="@color/colorLighterGrey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_component"
            android:layout_marginStart="@dimen/margin_component"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_app_edittext"
                android:drawablePadding="30dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawableTint="@color/colorHint"
                android:fontFamily="@font/nunito"
                android:hint="@string/title_email"
                android:maxLength="32"
                android:maxLines="1"
                android:textColor="@color/colorHint"
                android:textColorHint="@color/colorLighterGrey" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_component"
            android:layout_marginStart="@dimen/margin_component"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_app_edittext"
                android:drawablePadding="30dp"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawableTint="@color/colorHint"
                android:fontFamily="@font/nunito"
                android:hint="@string/title_password"
                android:inputType="textPassword"
                android:maxLength="32"
                android:maxLines="1"
                android:textColor="@color/colorHint"
                android:textColorHint="@color/colorLighterGrey"
                app:hintEnabled="false" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_component"
            android:layout_marginStart="@dimen/margin_component"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_app_edittext"
                android:drawablePadding="30dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawableTint="@color/colorHint"
                android:fontFamily="@font/nunito"
                android:hint="@string/title_confirm_password"
                android:inputType="textPassword"
                android:maxLength="32"
                android:maxLines="1"
                android:textColor="@color/colorHint"
                android:textColorHint="@color/colorLighterGrey" />

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_component"
            android:layout_marginStart="@dimen/margin_component"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_app_button"
            android:fontFamily="@font/nunito"
            android:text="@string/title_create_account"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_component"
            android:layout_marginStart="@dimen/margin_component"
            android:layout_marginTop="10dp"
            android:text="@string/title_confirm_sign_up"
            android:textAlignment="center"
            android:textColor="@color/colorHint"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_component"
                android:text="@string/title_switch_to_login"
                android:textColor="@color/colorHint" />

        </RelativeLayout>
    </LinearLayout>

    <include
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</FrameLayout>
